some updates in project
