# hero_api/swagger/main.yaml
@@ -30,144 +30,141 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-#    post:
-#      summary: Add a new Hero
-#      tags:
-#        - Heroes
-#      operationId: hero_api.controllers.hero_controller.HeroController.add_hero
-#      requestBody:
-#        required: true
-#        content:
-#          application/json:
-#            schema:
-#              $ref: "#/components/schemas/Hero"
-#      responses:
-#        '201':
-#          description: Successful response about creating a Hero
-#          content:
-#            application/json:
-#              schema:
-#                $ref: "#/components/schemas/Hero"
-#        'default':
-#          description: Error
-#          content:
-#            application/json:
-#              schema:
-#                $ref: "#/components/schemas/Error"
-#
-#  /detail/{id}:
-#    get:
-#      summary: Get a Hero
-#      tags:
-#        - Heroes
-#      operationId: hero_api.controllers.hero_controller.HeroController.get_hero
-#      parameters:
-#        - name: id
-#          in: path
-#          required: true
-#          description: Hero ID
-#          schema:
-#            type: string
-#            example: 69
-#      responses:
-#        '200':
-#          description: Successful response with JSON hero
-#          content:
-#            application/json:
-#              schema:
-#                $ref: "#/components/schemas/Hero"
-#        'default':
-#          description: Error
-#          content:
-#            application/json:
-#              schema:
-#                $ref: "#/components/schemas/Error"
-#
-#    put:
-#      summary: Update a Hero
-#      tags:
-#        - Heroes
-#      operationId: hero_api.controllers.hero_controller.HeroController.update_hero
-#      parameters:
-#        - name: id
-#          in: path
-#          required: true
-#          description: Hero ID
-#          schema:
-#            type: string
-#            example: 69
-#      responses:
-#        '200':
-#          description: Successful update to the Hero
-#          content:
-#            application/json: {}
-#        'default':
-#          description: Error
-#          content:
-#            application/json:
-#              schema:
-#                $ref: "#/components/schemas/Error"
-#
-#    delete:
-#      summary: Delete a Hero
-#      tags:
-#        - Heroes
-#      operationId: hero_api.controllers.hero_controller.HeroController.delete_hero
-#      parameters:
-#        - name: id
-#          in: path
-#          required: true
-#          description: Hero ID
-#          schema:
-#            type: string
-#            example: 69
-#      responses:
-#        '200':
-#          description: Successful removal of the Hero
-#          content:
-#            application/json: {}
-#        'default':
-#          description: Error
-#          content:
-#            application/json:
-#              schema:
-#                $ref: "#/components/schemas/Error"
-#
-#  /search/{search_term}:
-#    get:
-#      summary: Search a Hero
-#      tags:
-#        - Heroes
-#      operationId: hero_api.controllers.hero_controller.HeroController.search_heroes
-#      parameters:
-#        - name: search_term
-#          in: path
-#          required: true
-#          description: Match Hero Search
-#          schema:
-#            type: string
-#            example: Luna
-#      responses:
-#        '200':
-#          description: Successful search for Heroes for the given term
-#          content:
-#            application/json:
-#              schema:
-#                $ref: "#/components/schemas/Heroes"
-#        'default':
-#          description: Error
-#          content:
-#            application/json:
-#              schema:
-#                $ref: "#/components/schemas/Error"
+    post:
+      summary: Add a new Hero
+      tags:
+        - Heroes
+      operationId: hero_api.controllers.hero_controller.HeroController.add_hero
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Hero"
+      responses:
+        '201':
+          description: Successful response about creating a Hero
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Hero"
+        'default':
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
+  /detail/{hero_id}:
+    get:
+      summary: Get a Hero
+      tags:
+        - Heroes
+      operationId: hero_api.controllers.hero_controller.HeroController.get_hero
+      parameters:
+        - name: hero_id
+          in: path
+          required: true
+          description: Hero ID
+          schema:
+            type: string
+            example: 69
+      responses:
+        '200':
+          description: Successful response with JSON hero
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Hero"
+        'default':
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
+    put:
+      summary: Update a Hero
+      tags:
+        - Heroes
+      operationId: hero_api.controllers.hero_controller.HeroController.update_hero
+      parameters:
+        - name: hero_id
+          in: path
+          required: true
+          description: Hero ID
+          schema:
+            type: string
+            example: 69
+      responses:
+        '200':
+          description: Successful update to the Hero
+          content:
+            application/json: {}
+        'default':
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
+    delete:
+      summary: Delete a Hero
+      tags:
+        - Heroes
+      operationId: hero_api.controllers.hero_controller.HeroController.delete_hero
+      parameters:
+        - name: hero_id
+          in: path
+          required: true
+          description: Hero ID
+          schema:
+            type: string
+            example: 69
+      responses:
+        '200':
+          description: Successful removal of the Hero
+          content:
+            application/json: {}
+        'default':
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
+  /search/{name}:
+    get:
+      summary: Search a Hero
+      tags:
+        - Heroes
+      operationId: hero_api.controllers.hero_controller.HeroController.search_heroes
+      parameters:
+        - name: name
+          in: path
+          required: true
+          description: Match Hero Search
+          schema:
+            type: string
+            example: Luna
+      responses:
+        '200':
+          description: Successful search for Heroes for the given term
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Heroes"
+        'default':
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
 
 components:
   schemas:
     Hero:
       type: object
-      required: 
-        - id
-        - name
       properties:
         id:
           type: string
@@ -175,7 +172,7 @@ components:
         name:
           type: string
           example: Bugiman
-    
+
     Heroes:
       type: array
       items:
